@@ -63,13 +63,21 @@ as are the following DOM elements:
 <h3>Text</h3>
 <h4>properties</h4>
 <ul>
-<li>value - read/write - the current text value</li>
+<li>value    - read/write - the current text value</li>
+</ul>
+<h4>events</h4>
+<ul>
+<li>onChange - invoked when the value of the control is changed via form.setParameter</li>
 </ul>
 
 <h3>TextArea</h3>
 <h4>properties</h4>
 <ul>
-<li>value - read/write - the current text value</li>
+<li>value    - read/write - the current text value</li>
+</ul>
+<h4>events</h4>
+<ul>
+<li>onChange - invoked when the value of the control is changed via form.setParameter</li>
 </ul>
 
 <h3>Hidden</h3>
@@ -81,7 +89,11 @@ as are the following DOM elements:
 <h3>Password</h3>
 <h4>properties</h4>
 <ul>
-<li>value - read/write - the current text value</li>
+<li>value    - read/write - the current text value</li>
+</ul>
+<h4>events</h4>
+<ul>
+<li>onChange - invoked when the value of the control is changed via form.setParameter</li>
 </ul>
 
 <h3>Checkbox</h3>
@@ -97,6 +109,10 @@ as are the following DOM elements:
 <li>selectedIndex  - read-only - the index of the selected option</li>
 <li>options        - read-write - an array of the options associated with the control</li>
 <li>options.length - read-write - the number of options associated with the control</li>
+</ul>
+<h4>events</h4>
+<ul>
+<li>onChange       - invoked when the value of the control is changed via form.setParameter</li>
 </ul>
 
 <h3>Option</h3>
